--- a/kg-frontend/package.json
+++ b/kg-frontend/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "^20.0.0",
     "@fortawesome/fontawesome-free": "^7.0.0",
     "chart.js": "^4.5.0",
+    "jwt-decode": "^4.0.0",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
